@@ -794,23 +794,6 @@ in_plt_section (CORE_ADDR pc, char *name)
 	    && strcmp (s->the_bfd_section->name, ".plt") == 0);
   return (retval);
 }
-
-/* Return nonzero if NAME is in the import list of OBJFILE.  Else
-   return zero.  */
-
-int
-is_in_import_list (char *name, struct objfile *objfile)
-{
-  int i;
-
-  if (!objfile || !name || !*name)
-    return 0;
-
-  for (i = 0; i < objfile->import_list_size; i++)
-    if (objfile->import_list[i] && DEPRECATED_STREQ (name, objfile->import_list[i]))
-      return 1;
-  return 0;
-}
 
 
 /* Keep a registry of per-objfile data-pointers required by other GDB
